--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ footer:
 author: '学道'
 nickname: '悟'
 bio: '清静为天下正'
-avatar: '/assets/img/profile.png'
+avatar: '/assets/img/道.png'
 
 # Search
 search: true
